Fix safari scrollbar issue

--- a/src/layouts/MainLayout/styles.scss
+++ b/src/layouts/MainLayout/styles.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+
+  @media (max-width: 767px) {
+    display: block;
+    height: auto;
+  }
 }
 
 .bgBlack {
@@ -16,6 +21,10 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+
+  @media (max-width: 767px) {
+    display: block;
+  }
 }
 
 .bodyContainerGrey {
